--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.14.0
   firebase_auth: ^4.16.0
   provider:
+  image_picker: ^1.0.7
   
 dev_dependencies:
   flutter_test:
