--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^4.16.0
   provider:
   image_picker: ^1.0.7
+  path_provider: ^2.1.2
   
 dev_dependencies:
   flutter_test:
