✨ feat: 채팅 목록 화면에 감정별로 이미지 다르게 표시

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,7 +75,10 @@ flutter:
     - images/anxious.png
     - images/depressed.png
     - images/happy.png
-    - images/chat_icon.png
+    - images/chat_icon_0.png
+    - images/chat_icon_1.png
+    - images/chat_icon_2.png
+    - images/chat_icon_3.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
